# Applicant-Resume-Analyzer

./: README.md  app.py  pyproject.toml  resume_utils.py  skills_list.py
notebooks/: fasttext_testing_3.ipynb  resume_data_extractor3.ipynb  resume_output.csv  resume_screening_job_dataset.csv  resume_train.txt  skill_list_creation.ipynb
templates/: admin.html  upload.html
