[project]
name = "applicant-resume-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fasttext-wheel>=0.9.2",
    "flask>=3.1.2",
    "mysql-connector-python>=9.5.0",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "spacy>=3.8.11",
]
